force-app/main/default/objects/User/fields/Current_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Current_Latitude__c</fullName>
    <label>F360 Current Latitude</label>
    <type>Number</type>
    <precision>10</precision><scale>6</scale>
</CustomField>