force-app/main/default/objects/User/fields/Current_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Current_Longitude__c</fullName>
    <label>F360 Current Longitude</label>
    <type>Number</type>
    <precision>10</precision><scale>6</scale>
</CustomField>