force-app/main/default/objects/User/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>F360 Preferred Language</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName
        >en</fullName><label>English</label><default
        >true</default></value><value><fullName>hi</fullName><label
        >Hindi</label></value><value><fullName>mr</fullName><label
        >Marathi</label></value><value><fullName>ta</fullName><label
        >Tamil</label></value><value><fullName>te</fullName><label
        >Telugu</label></value></valueSetDefinition></valueSet>
</CustomField>