force-app/main/default/objects/User/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>F360 Skills</label>
    <type>LongTextArea</type>
    <length>4096</length><visibleLines>3</visibleLines>
</CustomField>